--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -1,3 +1,5 @@
+@import 'colors.css';
+
 .img-g {
   background-position: top top;
 }
@@ -115,12 +117,36 @@ nav {
   width: 300px;
 }
 
-.location-text h2 {
-  font-size: 1.5em;
+section.location{
+  position: relative;
+  gap: 50px;
+  text-align: justify;
+  text-justify: distribute-all-lines;
 }
 
-.location-text p {
-  font-size: 1em;
+.location-text div{
+  display: flex;
+}
+
+.location-text{
+  width: 100%;
+  transform: translateY(20%);
+}
+
+.map{
+  position: relative;
+  width: 100%;
+  height: 300px;
+  border-radius: 10px;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
+}
+
+iframe{
+  position: absolute;
+  width: 100%;
+  height: 300px;
+  border-radius: 10px;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
 }
 
 footer {
