--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,7 +2,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Montserrat:wght@400;700&family=Playfair+Display:wght@700&family=Poppins:wght@400;600&display=swap');
 
-
+@import 'color.css';
 
 @font-face{
     font-family: 'raleway';
@@ -12,30 +12,6 @@
 @font-face {
     font-family: 'lato';
     src: url('../fontes/Lato_font/Lato-Bold.ttf') format('truetype');
-}
-
-/*  Inútil  */
-:root {
-
-    /*Cores*/
-
-    --cor-1: #302520;
-    --cor-2: #6a7791;
-    --cor-3: #514c53;
-    --cor-4: #8f8da0;
-    --cor-5: #c68863;
-    --cor-6: #5e6376;
-    --cor-7: #4a342c;
-    --cor-8: #607b99;
-    --cor-9: #89573f;
-    --cor-10: #2e3b42;
-
-    --mont : 'Montserrat', sans-serif;
-    --raleway: 'raleway', sans-serif;
-    --lato: 'lato', sans-serif;
-    --pops: 'Poppins', sans-serif;
-    --well: 'Playfair Display', serif;
-    
 }
 
 * {
@@ -66,20 +42,6 @@ header {
     z-index: 1;
     animation: bg-color 5s ease infinite;
 
-}
-
-@keyframes bg-color {
-    0%{
-        background-position: 50% 0%;
-    }
-
-    50%{
-        background-position: 100% 50%;
-    }
-
-    100%{
-        background-position: 50% 0%;
-    }
 }
 
 nav {
@@ -160,7 +122,7 @@ a:hover{
 }
 
 section#reserve{
-    background-color: #1c1c1c;
+    background-color: var(--cor-great-black);
 }
 
 .rooms{
@@ -295,40 +257,10 @@ section, .about {
     transform: translateY(1);
 }
 
-
-
-.location {
-    background-color: #4a342c;
-    display: flex;
-    flex-flow: row wrap;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-}
-
-.location div {
-    flex: auto;
-}
-
-.location-text h2 {
-    color: var(--cor-9);
-    font-size: 1.8em;
-    padding: 10px;
-    text-align: center;
-}
-
-.location-text p {
-    font-family: var(--pops);
-    color: white;
-    text-align: justify;
-    font-size: 1.2em;
-    padding: 10px;
-}
-
-.responsive-iframe {
-    width: 100%;
-    border-radius: 5px;
-    height: 400px;
+section.location{
+    background-color: var(--cor-great-black);
+    color: rgb(221, 221, 221);
+    font-weight: lighter;
 }
 
 section#contato{
@@ -417,7 +349,7 @@ input[type="submit"]{
 
 footer {
     padding: 30px;
-    background-color: #1c1c1c;
+    background-color: var(--cor-great-black);
     color: rgb(193, 194, 195);
     display: flex;
     flex-flow: row wrap;
