--- a/src/css/style.css
+++ b/src/css/style.css
@@ -244,8 +244,6 @@ section, .about {
     color: #555;
 }
 
-
-
 .animate {
     opacity: 0;
     transform: translateY(20px);
@@ -260,7 +258,42 @@ section, .about {
 section.location{
     background-color: var(--cor-great-black);
     color: rgb(221, 221, 221);
-    font-weight: lighter;
+    font-weight: normal;
+    display: flex;
+    flex-direction: row;
+}
+
+.location-text{
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    padding: 15px;
+}
+
+.location-text h2{
+    font-size: 2em;
+}
+
+.location-text p{
+    font-size: 1.2em;
+    max-width: 80%;
+}
+
+.map{
+    width: 100%;
+    height: 300px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
+    position: relative;
+}
+
+iframe{
+    width: 100%;
+    height: 300px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
 }
 
 section#contato{
@@ -272,19 +305,6 @@ section#contato{
     align-items: center;
     justify-content: space-around;
     text-align: justify;
-}
-
-.alert {
-    padding: 15px;
-    margin: 20px 0;
-    border: 1px solid;
-    border-radius: 5px;
-    background-color: #f8f9fa;
-    color: #333;
-}
-
-.alert p {
-    margin: 0;
 }
 
 form{
@@ -355,7 +375,10 @@ footer {
     flex-flow: row wrap;
     justify-content: space-around;
     align-items: flex-start;
+     
+    position: relative;
 }
+
 
 /* Footer Item Styles */
 .footer-item {
@@ -372,44 +395,44 @@ footer {
     display: flex;
     width: 165px;
     margin: 30px;
+     
 }
 
 .footer-logo h2 {
     margin: 0;
     color: white;
     text-align: center;
-}
-
-.tagline {
-    color: #a0522d;
-    font-style: italic;
-    margin-top: 5px;
-    text-align: center;
+     
 }
 
 .footer-contact ul {
     list-style: none;
     padding: 0;
+     
 }
 
 .footer-contact h3 {
     margin-bottom: 10px;
     color: white;
+     
 }
 
 .footer-contact ul li {
     margin-bottom: 5px;
+     
 }
 
 .footer-contact ul li i {
     margin-right: 8px;
     color: #a0522d;
+     
 }
 
 .operating-hours {
     margin-top: 10px;
     font-size: 14px;
     color: #a0522d;
+     
 }
 
 .operating-hours i {
@@ -423,51 +446,46 @@ footer {
     margin-bottom: 10px;
     margin-top: 10px;
     text-align: center;
+     
 }
 
 .social-media li {
     list-style: none;
+     
 }
 
 .social-media a {
     color: rgb(193, 194, 195);
     font-size: 24px;
     transition: color 0.3s;
+     
 }
 
 .social-media a:hover {
     color: #a0522d; /* Hover color */
 }
 
-/* Newsletter Signup and Special Offers */
-.newsletter-signup, .special-offers {
-    display: block;
-    color: #a0522d;
-    margin-bottom: 10px;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-.newsletter-signup:hover, .special-offers:hover {
-    text-decoration: underline;
-}
-
 /* Attribution */
 footer small {
-    color: rgb(193, 194, 195);
+    position: absolute;
+    bottom: 0;
+    width: 100%;
     justify-self: center;
     align-self: flex-end;
     text-align: center;
-    width: 100%;
+    color: rgb(193, 194, 195);
+     
 }
 
 footer small a {
     color: #a0522d;
     text-decoration: none;
+     
 }
 
 footer small a:hover {
     text-decoration: underline;
+     
 }
 /* Media Queries - Tablets */
 @media (min-width: 768px) and (max-width: 1040px) {
