--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -133,11 +133,11 @@ section.location{
 }
 
 .location-text h2{
-  font-size: 1.8em;
+  font-size: 1.5em;
 }
 
 .location-text p{
-  font-size: 1.3em;
+  font-size: 1.2em;
   min-width: 100%;
 }
 
@@ -157,10 +157,16 @@ iframe{
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
 }
 
-footer {
-  flex-flow: column;
+
+.footer-container{
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 20px;
+  padding: 20px;
+  color: white;
+  font-size: 1rem;
 }
 
 .footer-item {
